--- a/stock.html
+++ b/stock.html
@@ -8,7 +8,76 @@
     margin: 20px;
     color: #333;
   }
+  #btnActualizar {
+  background: #28a745;
+}
+#btnActualizar:hover {
+  background: #1e7e34;
+}
+ul li h4 {
+  margin: 0 0 8px;
+  font-size: 1.2em;
+  color: #007bff;
+}
+ul li p {
+  margin: 4px 0;
+}
 
+#btnSubir {
+  background: #ffc107;
+  color: #333;
+}
+#btnSubir:hover {
+  background: #e0a800;
+  color: #fff;
+}
+  #dropZone {
+  border: 2px dashed #007bff;
+  border-radius: 10px;
+  padding: 30px;
+  text-align: center;
+  color: #555;
+  background: #fdfdfd;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+#dropZone.dragover {
+  background-color: #e6f0ff;
+  border-color: #0056b3;
+  color: #0056b3;
+}
+header {
+  background: #007bff;
+  color: #fff;
+  padding: 15px;
+  text-align: center;
+  font-size: 1.6em;
+  font-weight: bold;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+nav button {
+  background: #fff;
+  color: #007bff;
+  border: 1px solid #007bff;
+  border-radius: 6px;
+  padding: 8px 14px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+nav button:hover {
+  background: #007bff;
+  color: #fff;
+}
   h2, h3 {
     margin-top: 25px;
     color: #007bff;
@@ -215,14 +284,15 @@ let productosParseados = [];
 const dropZone = document.getElementById("dropZone");
 dropZone.addEventListener("dragover", (e) => {
   e.preventDefault();
-  dropZone.style.backgroundColor = "#f0f0f0";
+ dropZone.classList.add("dragover");
 });
 dropZone.addEventListener("dragleave", () => {
-  dropZone.style.backgroundColor = "";
+  dropZone.classList.remove("dragover");
 });
 dropZone.addEventListener("drop", (e) => {
   e.preventDefault();
-  dropZone.style.backgroundColor = "";
+  dropZone.classList.remove("dragover");
+
 
   const file = e.dataTransfer.files[0];
   const reader = new FileReader();
