--- a/stock.html
+++ b/stock.html
@@ -227,36 +227,62 @@ dropZone.addEventListener("drop", (e) => {
 
   const file = e.dataTransfer.files[0];
   const reader = new FileReader();
-  reader.onload = (ev) => {
-    const lines = ev.target.result.split("\n");
-    productosParseados = [];
+reader.onload = async (ev) => {
+  const lines = ev.target.result.split("\n");
+  productosParseados = [];
 
-    let contador = 1;
-    lines.forEach(line => {
-      line = line.replace(/^\d{1,2}\/\d{1,2}\/\d{4},\s*\d{1,2}:\d{2}\s*-\s*/, "");
-      const idx = line.indexOf(":");
-      if (idx !== -1) line = line.substring(idx + 1).trim();
-      line = line.replace(/<Se editó.*?>/i, "").trim();
+  // Paso 1: obtener todos los órdenes existentes desde Firestore
+  const productosSnap = await getDocs(collection(db, "productos"));
+  const ordenesUsados = [];
+  productosSnap.forEach(docSnap => {
+    const prod = docSnap.data();
+    if (prod.orden) ordenesUsados.push(prod.orden);
+  });
+  ordenesUsados.sort((a, b) => a - b);
 
-      const parts = line.split(",");
-      if (parts.length >= 6) {
-        productosParseados.push({
-          orden: contador,
-          nombre: parts[0].trim(),
-          color: parts[1].trim(),
-          precio: Number(parts[2]),
-          stock: Number(parts[3]),
-          fecha: parts[4].trim(),
-          categoria: parts[5].trim(),
-          claveUnica: `${parts[0].trim()}|${parts[1].trim()}|${parts[5].trim()}`
-        });
-        contador++;
+  // Función para calcular el próximo orden libre (reutiliza huecos)
+  function obtenerNuevoOrden() {
+    let nuevoOrden = 1;
+    for (let i = 0; i < ordenesUsados.length; i++) {
+      if (ordenesUsados[i] !== nuevoOrden) {
+        return nuevoOrden; // hueco encontrado
       }
-    });
+      nuevoOrden++;
+    }
+    return nuevoOrden; // si no hay huecos, devuelve el siguiente consecutivo
+  }
 
-    // Mostrar botones de acción
-    document.getElementById("acciones").style.display = "block";
-  };
+  // Paso 2: parsear cada línea y asignar orden correcto
+  lines.forEach(line => {
+    line = line.replace(/^\d{1,2}\/\d{1,2}\/\d{4},\s*\d{1,2}:\d{2}\s*-\s*/, "");
+    const idx = line.indexOf(":");
+    if (idx !== -1) line = line.substring(idx + 1).trim();
+    line = line.replace(/<Se editó.*?>/i, "").trim();
+
+    const parts = line.split(",");
+    if (parts.length >= 6) {
+      const nuevoOrden = obtenerNuevoOrden();
+
+      productosParseados.push({
+        orden: nuevoOrden,
+        nombre: parts[0].trim(),
+        color: parts[1].trim(),
+        precio: Number(parts[2]),
+        stock: Number(parts[3]),
+        fecha: parts[4].trim(),
+        categoria: parts[5].trim(),
+        claveUnica: `${parts[0].trim()}|${parts[1].trim()}|${parts[5].trim()}`
+      });
+
+      // actualizar lista de órdenes usados para el próximo producto
+      ordenesUsados.push(nuevoOrden);
+      ordenesUsados.sort((a, b) => a - b);
+    }
+  });
+
+  // Mostrar botones de acción
+  document.getElementById("acciones").style.display = "block";
+};
   reader.readAsText(file);
 });
     const app = initializeApp(firebaseConfig);
@@ -460,17 +486,18 @@ async function subirProductos(productos) {
         });
 
       } else {
-        const docRef = await addDoc(collection(db, "productos"), {
-          orden: prod.orden,
-          nombre: prod.nombre,
-          color: prod.color,
-          precio: Number(prod.precio),
-          stock: Number(prod.stock),
-          fecha: prod.fecha || new Date().toISOString(),
-          categoria: prod.categoria || "",
-          claveUnica: prod.claveUnica
-        });
-        productoId = docRef.id;
+const nuevoOrden = await obtenerNuevoOrden(db);
+
+const docRef = await addDoc(collection(db, "productos"), {
+  orden: nuevoOrden,   // 🔹 ahora se asigna el orden libre
+  nombre: prod.nombre,
+  color: prod.color,
+  precio: Number(prod.precio),
+  stock: Number(prod.stock),
+  fecha: prod.fecha || new Date().toISOString(),
+  categoria: prod.categoria || "",
+  claveUnica: prod.claveUnica
+});        productoId = docRef.id;
 
         await addDoc(collection(db, "historial"), {
           productoId,
@@ -525,17 +552,18 @@ async function actualizarStock(productos) {
         });
 
       } else {
-        const docRef = await addDoc(collection(db, "productos"), {
-          orden: prod.orden,
-          nombre: prod.nombre,
-          color: prod.color,
-          precio: Number(prod.precio),
-          stock: Number(prod.stock),
-          fecha: prod.fecha || new Date().toISOString(),
-          categoria: prod.categoria || "",
-          claveUnica: prod.claveUnica
-        });
-        productoId = docRef.id;
+const nuevoOrden = await obtenerNuevoOrden(db);
+
+const docRef = await addDoc(collection(db, "productos"), {
+  orden: nuevoOrden,   // 🔹 ahora se asigna el orden libre
+  nombre: prod.nombre,
+  color: prod.color,
+  precio: Number(prod.precio),
+  stock: Number(prod.stock),
+  fecha: prod.fecha || new Date().toISOString(),
+  categoria: prod.categoria || "",
+  claveUnica: prod.claveUnica
+});        productoId = docRef.id;
 
         await addDoc(collection(db, "historial"), {
           productoId,
@@ -585,17 +613,18 @@ async function subirStock(productos) {
         });
 
       } else {
-        const docRef = await addDoc(collection(db, "productos"), {
-          orden: prod.orden,
-          nombre: prod.nombre,
-          color: prod.color,
-          precio: Number(prod.precio),
-          stock: Number(prod.stock),
-          fecha: prod.fecha || new Date().toISOString(),
-          categoria: prod.categoria || "",
-          claveUnica: prod.claveUnica
-        });
-        productoId = docRef.id;
+const nuevoOrden = await obtenerNuevoOrden(db);
+
+const docRef = await addDoc(collection(db, "productos"), {
+  orden: nuevoOrden,   // 🔹 ahora se asigna el orden libre
+  nombre: prod.nombre,
+  color: prod.color,
+  precio: Number(prod.precio),
+  stock: Number(prod.stock),
+  fecha: prod.fecha || new Date().toISOString(),
+  categoria: prod.categoria || "",
+  claveUnica: prod.claveUnica
+});        productoId = docRef.id;
 
         await addDoc(collection(db, "historial"), {
           productoId,
@@ -669,4 +698,26 @@ document.getElementById("buscadorEspecial").addEventListener("input", async (e) 
     resultados.innerHTML = "<li>No se encontraron coincidencias</li>";
   }
 });
+// 🔹 Función reutilizable para calcular el próximo orden libre
+async function obtenerNuevoOrden(db) {
+  const productosSnap = await getDocs(collection(db, "productos"));
+  const ordenesUsados = [];
+
+  productosSnap.forEach(docSnap => {
+    const prod = docSnap.data();
+    if (prod.orden) ordenesUsados.push(prod.orden);
+  });
+
+  ordenesUsados.sort((a, b) => a - b);
+
+  let nuevoOrden = 1;
+  for (let i = 0; i < ordenesUsados.length; i++) {
+    if (ordenesUsados[i] !== nuevoOrden) {
+      return nuevoOrden; // hueco encontrado
+    }
+    nuevoOrden++;
+  }
+  return nuevoOrden; // si no hay huecos, devuelve el siguiente consecutivo
+}
 </script>
+
