--- a/administrador.html
+++ b/administrador.html
@@ -6,14 +6,14 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #f0f0f0, #ffd9d9); /* tono rojizo */
+      background: linear-gradient(135deg, #f0f0f0, #ffd9d9);
       text-align: center;
       margin: 0;
       padding: 40px;
     }
 
     h1 {
-      color: #b71c1c; /* rojo fuerte */
+      color: #b71c1c;
       margin-bottom: 40px;
       font-size: 36px;
       text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
@@ -34,7 +34,7 @@
       font-weight: bold;
       cursor: pointer;
       border-radius: 12px;
-      background-color: #e53935; /* rojo */
+      background-color: #e53935;
       color: white;
       border: none;
       box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
@@ -64,7 +64,7 @@
       transform: scale(1.05);
     }
 
-    /* 🔹 Estilos del formulario */
+    /* Estilos de formularios */
     .titulo-form {
       color: #b71c1c;
       font-size: 28px;
@@ -72,7 +72,7 @@
       text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
     }
 
-    .form-producto {
+    .form-producto, .form-credenciales {
       background: #fff;
       padding: 30px;
       border-radius: 12px;
@@ -131,28 +131,28 @@
 <body>
   <h1>Panel de Administración Glowzza</h1>
 
-<button onclick="mostrarCredenciales()" class="boton-admin">
-  🔑 Configurar Credenciales
-</button>
+  <!-- Botón para mostrar credenciales -->
+  <button onclick="mostrarCredenciales()" class="boton-admin">🔑 Configurar Credenciales</button>
 
-<!-- Formulario oculto -->
-<div id="contenedorCredenciales" style="display:none;">
-  <h2 class="titulo-form">Configurar credenciales de administrador</h2>
-  <form id="formCredenciales" class="form-credenciales">
-    <div class="campo">
-      <label for="usuarioAdmin">👤 Usuario</label>
-      <input type="text" id="usuarioAdmin" placeholder="Ej: adminGlowzza" required>
-    </div>
+  <!-- Formulario oculto -->
+  <div id="contenedorCredenciales" style="display:none;">
+    <h2 class="titulo-form">Configurar credenciales de administrador</h2>
+    <form id="formCredenciales" class="form-credenciales">
+      <div class="campo">
+        <label for="usuarioAdmin">👤 Usuario</label>
+        <input type="text" id="usuarioAdmin" placeholder="Ej: adminGlowzza" required>
+      </div>
 
-    <div class="campo">
-      <label for="passwordAdmin">🔒 Contraseña</label>
-      <input type="password" id="passwordAdmin" placeholder="********" required>
-    </div>
+      <div class="campo">
+        <label for="passwordAdmin">🔒 Contraseña</label>
+        <input type="password" id="passwordAdmin" placeholder="********" required>
+      </div>
 
-    <button type="submit" class="btn-guardar">Guardar credenciales</button>
-  </form>
-</div>
-  <!-- 🔹 Formulario de carga de productos -->
+      <button type="submit" class="btn-guardar">Guardar credenciales</button>
+    </form>
+  </div>
+
+  <!-- Formulario de carga de productos -->
   <h2 class="titulo-form">Subir nuevo producto</h2>
   <form id="formProducto" class="form-producto">
     <div class="campo">
@@ -183,18 +183,28 @@
     <button type="submit" class="btn-guardar">Guardar producto</button>
   </form>
 
-  <button onclick="location.href='menu.html'" class="boton-volver">
-    Volver al Panel Principal
-  </button>
+  <button onclick="location.href='menu.html'" class="boton-volver">Volver al Panel Principal</button>
 
-  <!-- 🔹 Lógica JS (ejemplo con Firebase) -->
+  <!-- Firebase y lógica -->
   <script type="module">
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "firebase/storage";
-    import { getFirestore, collection, addDoc } from "firebase/firestore";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
 
-    const db = getFirestore();
-    const storage = getStorage();
+    const firebaseConfig = {
+      apiKey: "TU_API_KEY",
+      authDomain: "TU_DOMINIO.firebaseapp.com",
+      projectId: "TU_PROJECT_ID",
+      storageBucket: "TU_BUCKET.appspot.com",
+      messagingSenderId: "TU_SENDER_ID",
+      appId: "TU_APP_ID"
+    };
 
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const storage = getStorage(app);
+
+    // Guardar producto
     document.getElementById("formProducto").addEventListener("submit", async (e) => {
       e.preventDefault();
 
@@ -204,12 +214,10 @@
       const categoria = document.getElementById("categoria").value;
       const descripcion = document.getElementById("descripcion").value;
 
-      // Subir imagen a Storage
       const storageRef = ref(storage, `productos/${archivo.name}`);
       await uploadBytes(storageRef, archivo);
       const imagenUrl = await getDownloadURL(storageRef);
 
-      // Guardar datos en Firestore
       await addDoc(collection(db, "productos"), {
         nombre,
         precio,
@@ -222,11 +230,28 @@
       alert("Producto cargado correctamente");
       document.getElementById("formProducto").reset();
     });
-    function mostrarCredenciales() {
-  const contenedor = document.getElementById("contenedorCredenciales");
-  contenedor.style.display = contenedor.style.display === "none" ? "block" : "none";
-}
+
+    // Guardar credenciales de administrador
+    document.getElementById("formCredenciales").addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const usuario = document.getElementById("usuarioAdmin").value;
+      const password = document.getElementById("passwordAdmin").value;
+
+      await addDoc(collection(db, "adminCredenciales"), {
+        usuario,
+        password
+      });
+
+      alert("Credenciales guardadas correctamente");
+      document.getElementById("formCredenciales").reset();
+    });
+
+    // Mostrar/ocultar formulario de credenciales
+    window.mostrarCredenciales = function() {
+      const contenedor = document.getElementById("contenedorCredenciales");
+      contenedor.style.display = contenedor.style.display === "none" ? "block" : "none";
+    };
   </script>
-  
 </body>
 </html>
