--- a/administrador.html
+++ b/administrador.html
@@ -191,14 +191,15 @@
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
     import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
 
-    const firebaseConfig = {
-      apiKey: "TU_API_KEY",
-      authDomain: "TU_DOMINIO.firebaseapp.com",
-      projectId: "TU_PROJECT_ID",
-      storageBucket: "TU_BUCKET.appspot.com",
-      messagingSenderId: "TU_SENDER_ID",
-      appId: "TU_APP_ID"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyBDrfX2Fszw9-M1DwzX_Sk63et9tw4ddOU",
+  authDomain: "glowzzainventario.firebaseapp.com",
+  projectId: "glowzzainventario",
+  storageBucket: "glowzzainventario.appspot.com",   // 🔹 corregido
+  messagingSenderId: "159721581844",
+  appId: "1:159721581844:web:f62cdb303258dc847b6601",
+  measurementId: "G-0FR3Q6P3L2"
+};
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
